Correct paths for fractal assets

--- a/src/components/_preview.hbs
+++ b/src/components/_preview.hbs
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link media="all" rel="stylesheet" href="{{ path '/index.css' }}">
+        <link media="all" rel="stylesheet" href="{{ path '/css/index.css' }}">
         <title>Preview Layout</title>
     </head>
     <body>
 
         {{{ yield }}}
 
-        <script src="{{ path '/bundle.js' }}"></script>
+        <script src="{{ path '/js/index.js' }}"></script>
     </body>
 </html>
