Use context data for accordion component

--- a/src/components/accordion/accordion.hbs
+++ b/src/components/accordion/accordion.hbs
@@ -1,24 +1,10 @@
 <div class="silc-accordion">
+    {{#each sections}}
     <section class="silc-accordion__section">
         <header class="silc-accordion__header">
-            <h2 class="silc-accordion__label">Accordion 1</h2>
+            <h2 class="silc-accordion__label">{{title}}</h2>
         </header>
-        <div class="silc-accordion__content">
-            <p>Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-                justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor. Vivamus sagittis
-                lacus vel augue laoreet rutrum faucibus dolor auctor. Donec sed odio dui. Nullam quis risus eget urna
-                mollis ornare vel eu leo.</p>
-        </div>
+        <div class="silc-accordion__content">{{{content}}}</div>
     </section>
-    <section class="silc-accordion__section">
-        <header class="silc-accordion__header">
-            <h2 class="silc-accordion__label">Accordion 2</h2>
-        </header>
-        <div class="silc-accordion__content">
-            <p>Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-                justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor. Vivamus sagittis
-                lacus vel augue laoreet rutrum faucibus dolor auctor. Donec sed odio dui. Nullam quis risus eget urna
-                mollis ornare vel eu leo.</p>
-        </div>
-    </section>
+    {{/each}}
 </div>
