--- a/src/components/accordion/accordion--tabs.hbs
+++ b/src/components/accordion/accordion--tabs.hbs
@@ -1,24 +1,17 @@
 <div class="silc-accordion silc-accordion--tabs" id="accordion-4">
     <nav class="silc-accordion__nav">
         <ul class="silc-accordion__nav-items">
-            <li class="silc-accordion__nav-item"><a class="silc-accordion__nav-link" href="#silc-accordion-4-1">Tab 1</a></li>
-            <li class="silc-accordion__nav-item"><a class="silc-accordion__nav-link" href="#silc-accordion-4-2">Tab 2</a></li>
+            {{#each sections}}
+            <li class="silc-accordion__nav-item"><a class="silc-accordion__nav-link" href="#silc-accordion-4-{{@index}}">{{title}}</a></li>
+            {{/each}}
         </ul>
     </nav>
-    <section class="silc-accordion__section" id="silc-accordion-4-1">
+    {{#each sections}}
+    <section class="silc-accordion__section" id="silc-accordion-4-{{@index}}">
         <header class="silc-accordion__header">
-            <h2 class="silc-accordion__label">Tab 1</h2>
+            <h2 class="silc-accordion__label">{{title}}</h2>
         </header>
-        <div class="silc-accordion__content">
-            <p>Tab 1 content.</p>
-        </div>
+        <div class="silc-accordion__content">{{{content}}}</div>
     </section>
-    <section class="silc-accordion__section" id="silc-accordion-4-2">
-        <header class="silc-accordion__header">
-            <h2 class="silc-accordion__label">Tab 2</h2>
-        </header>
-        <div class="silc-accordion__content">
-            <p>Tab 2 content.</p>
-        </div>
-    </section>
+    {{/each}}
 </div>
