Add viewport meta to fractal preview

--- a/src/components/_preview.hbs
+++ b/src/components/_preview.hbs
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link media="all" rel="stylesheet" href="{{ path '/css/index.css' }}">
         <title>Preview Layout</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
 
